<resources>
    <string name="app_name">PSP</string>

    <!--    Main Activity   -->
    <string name="main_activity_title">PROYECTOS</string>
    <string name="item_title_project_name">Project Name</string>
    <string name="input_name_project">Ingrese el nombre del proyecto</string>

    <!--    Functions   -->
    <string name="functions_title">FUNCIONES</string>
    <string name="functions_btn_timeLog">Time Log</string>
    <string name="functions_btn_defectLog">Defect Log</string>
    <string name="functions_btn_project_plan_summary">Project plan summary</string>

    <!--    Time Log    -->
    <string name="time_log_phase">Phase:</string>
    <string name="time_log_start">Start:</string>
    <string name="time_log_btn_start">Start </string>
    <string name="time_log_interruption">Interruption:</string>
    <string name="time_log_stop">Stop:</string>
    <string name="time_log_btn_stop">Stop</string>
    <string name="time_log_delta">Delta:</string>
    <string name="time_log_comments">Comments:</string>

    <!--    Defect Log  -->
    <string name="defect_log_date">Date:</string>
    <string name="defect_log_start">Iniciar</string>
    <string name="defect_log_type">Type:</string>
    <string name="defect_log_phase_injected">Phase Injected:</string>
    <string name="defect_log_phase_removed">Phase Removed:</string>
    <string name="defect_log_fix_time">Fix Time:</string>
    <string name="defect_log_defect_description">Defect Description:</string>

    <!--    Spinner Phase   -->
    <string-array name="phases">
        <item>PLAN</item>
        <item>DDL</item>
        <item>CODE</item>
        <item>COMPILE</item>
        <item>UT</item>
        <item>PM</item>
    </string-array>

    <!--    Spinner Type   -->
    <string-array name="type">
        <item>Documentation</item>
        <item>Syntax</item>
        <item>Build</item>
        <item>Package</item>
        <item>Assignment</item>
        <item>Interface</item>
        <item>Checking</item>
        <item>Data</item>
        <item>Function</item>
        <item>System</item>
        <item>Environment</item>
    </string-array>

    <!--    General-->
    <string name="date_and_time">22/11/2019 – 9:23 PM</string>
    <string name="txt_btn_register">Registrar</string>
    <string name="item_title_project_id">Project Id</string>
    <string name="new_project_dialog_title">Crear nuevo proyecto</string>
    <string name="new_project_dialog_message">Ingrese los datos para el nuevo proyecto</string>
    <string name="new_project_dialog_positive_btn">Agregar</string>
    <string name="new_project_dialog_negative_btn">Cancelar</string>
    <string name="new_project_dialog_positive_btn_error">El nombre del proyecto no puede estar vacío.</string>
    <string name="subtitle_acumulate">Acumulado</string>
    <string name="title_activity_project_plan_summary">ProjectPlanSummaryActivity</string>

    <!-- Bottom navigation -->

    <string name="title_time_in_phase">Time in phase</string>
    <string name="title_defects_injected">Defects injected</string>
    <string name="title_defects_removed">Defects removed</string>
    <string name="title_activity_ppp">PPPActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
